test/fail/SafeFlagPostulate.agda
module SafeFlagPostulate where

data Empty : Set where

postulate inhabitant : Empty